refactor!: change to use the `hytalegradle` plugin